@@ -37,6 +37,10 @@ User tools and API improvements and changes:
 - Show node-level unique identifiers for NVIDIA and AMD GPUs as
   CUDA and OpenCL location properties to separate devices in a
   multi-gpu environment.
+- Allow to build against the `libcuda.so` stubs library from the
+  CUDA SDK. Specify `--with-cuda=<cuda-sdk>/lib64/stubs` when
+  configuring, At runtime the `libcuda.so` library must be found by
+  the system-library path though.
 
 Bugfixes:
 
